# SmartAiLibrary

./: README.md  SUMMARY.md  composer.json
config/: ai.php  (+1 more)
public/aigp_fixed/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
public/aigp_fixed/.github/workflows/: ci.yml
public/aigp_fixed/eval/: run_eval.py
public/aigp_fixed/infra/: .env.example  docker-compose.prod.yml  docker-compose.yml
public/aigp_fixed/infra/prometheus/: prometheus.yml
public/aigp_fixed/services/embedding/: __init__.py  batch_job.py  encoder.py
public/aigp_fixed/services/ingestion/: chunker.py  cleaner.py  main.py
public/aigp_fixed/services/rag_service/: __init__.py  chain.py  main.py  retriever.py  streaming.py
public/aigp_fixed/services/rec_service/: __init__.py  main.py  online_updater.py  schemas.py
public/aigp_fixed/services/search_service/: main.py  reranker.py
public/aigp_fixed/services/summarise_service/: main.py  map_reduce.py  mindmap_builder.py  summariser.py
public/aigp_fixed/shared/: __init__.py  config.py  db.py  kafka_consumer.py  kafka_producer.py  metrics.py  models.py  pinecone_client.py  redis_client.py
public/aigp_fixed/shared/migrations/: __init__.py
public/aigp_fixed/tests/embedding/: test_encoder.py
public/aigp_fixed/tests/ingestion/: test_main.py
public/aigp_fixed/tests/load/: locustfile.py
public/aigp_fixed/tests/rec_service/: test_cbf.py
public/aigp_fixed/tests/search_service/: test_main.py
public/aigp_fixed/training/: __init__.py  biencoder_finetune.py  ncf_train.py
(+149 files in other folders)
